@@ -567,7 +567,7 @@ class MergeOrder(models.Model):
                                   verbose_name=u'系统状态')
     
     class Meta:
-        db_table = 'shop_trades_mergeorder'
+        db_table = 'shop_trades_mergeorder_c'
         unique_together = ("oid","merge_trade")
         verbose_name=u'订单商品'
         verbose_name_plural = u'订单商品列表'
@@ -708,7 +708,7 @@ class MergeBuyerTrade(models.Model):
     created    =  models.DateTimeField(null=True,auto_now=True)
     
     class Meta:
-        db_table = 'shop_trades_mergebuyertrade'
+        db_table = 'shop_trades_mergebuyertrade_c'
         verbose_name = u'合单记录'
         verbose_name_plural = u'合单列表'
         
@@ -755,14 +755,21 @@ class ReplayPostTrade(models.Model):
     succ_num   =  models.BigIntegerField(default=0,verbose_name=u'成功单数')
     succ_ids   =  models.TextField(blank=True,verbose_name=u'成功订单ID')
     
-    created    =  models.DateTimeField(null=True,db_index=True,auto_now_add=True,verbose_name=u'创建日期')
-    finished   =  models.DateTimeField(blank=True,db_index=True,null=True,verbose_name=u'完成日期')
+    created    =  models.DateTimeField(null=True,db_index=True,
+                                       auto_now_add=True,verbose_name=u'创建日期')
+    finished   =  models.DateTimeField(blank=True,db_index=True,
+                                       null=True,verbose_name=u'完成日期')
     
-    receiver   =  models.CharField(max_length=32,db_index=True,blank=True,verbose_name=u'接单人')
-    rece_date  =  models.DateTimeField(blank=True,null=True,db_index=True,verbose_name=u'接单时间')
-    check_date =  models.DateTimeField(blank=True,null=True,db_index=True,verbose_name=u'验收时间')
+    receiver   =  models.CharField(max_length=32,db_index=True,
+                                   blank=True,verbose_name=u'接单人')
+    rece_date  =  models.DateTimeField(blank=True,null=True,
+                                       db_index=True,verbose_name=u'接单时间')
+    check_date =  models.DateTimeField(blank=True,null=True,
+                                       db_index=True,verbose_name=u'验收时间')
     
-    status     =  models.IntegerField(default=0,db_index=True,choices=REPLAY_TRADE_STATUS,verbose_name=u'状态')
+    status     =  models.IntegerField(default=0,db_index=True,
+                                      choices=REPLAY_TRADE_STATUS,
+                                      verbose_name=u'状态')
     
     class Meta:
         db_table = 'shop_trades_replayposttrade'
