@@ -1,0 +1,1 @@
+alter table shop_trades_mergebuyertrade ENGINE=InnoDB;
